# ai-for-ai-podcast-generator

./: LICENSE  README.md  database.py  models.py  pyproject.toml  rss_scraper.py  utils.py
archive/: bert_topic_finetuning.py  tech_news.py  training_data.csv
data_model/: database.py  models.py
scraper/: rss_scraper.py  utils.py
topic_modeling/: bert_topic.py  bert_topic_no_finetuning.py  cased_vs_uncased_test.py  embedding_model_comparison.py  training_data.csv  utils.py
